<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="36dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/nexaas_logo"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nexaas_mark"
                android:src="@drawable/nexaas_logo"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="20sp"
                android:layout_gravity="top"
                android:gravity="top"
                android:textColor="#FFF"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/athentication_button"
            android:text="@string/enter_nexaas"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorGradientStart"
            android:background="@drawable/bg_shape_rounded"
            android:onClick="onLoginButtonClick"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>